Changed AUTHORS / README with new project details

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,6 @@ AUTHORS
 * Boris HUISGEN
   Email : <bhuisgen@hbis.fr>
 
-
 * Sylvain LANGLADE
   Email : <slanglade@elanz.fr>
 
@@ -15,3 +14,6 @@ AUTHORS
 
 * Matthieu PATOU
   Email : <mat@matws.net>
+
+* Tobias Unsleber
+  tobias.unsleber@gmx.net
