--- a/INSTALL
+++ b/INSTALL
@@ -40,12 +40,16 @@ Installation:
         Note: "web1" here is the user, the roundcube installation is running with
         It's possible and recommended to use one roundcube installation for multiple
         sites.
+        
+7) Add the user runnig the website of roundcube to the liveconfig group 
 
-7) If you have a non standard Maildir (other than /var/mail) change
+   usermod -a -G liveconfig <yourwebserverusername>
+
+8) If you have a non standard Maildir (other than /var/mail) change
     it in script "sieve_set_autoreply"
 
-8) Copy script "sieve_set_autoreply" to /usr/local/bin and
+9) Copy script "sieve_set_autoreply" to /usr/local/bin and
    set execute permissions
 
-9) Activate vacation plugin in Roundcube-Config-File
+10) Activate vacation plugin in Roundcube-Config-File
    ROUNDCUBE_ROOT/config/config.inc.php
